:sparkles: Update properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.kafka.producer.bootstrap-servers=localhost:9092
+
 order.topic=order-topic
+
+spring.kafka.consumer.group-id=facef-consumer-kafka
+spring.kafka.consumer.auto-offset-reset=earliest
